<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="index_scan_logo">首页扫描图Logo</string>
    <string name="index_scan_start">开始训练</string>
    <string name="index_scan_ing">扫描</string>
    <string name="index_scan_ed">（已扫描）</string>
    <string name="type_in_info">信息录入</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="loading">加载中…</string>
    <string name="down_state">正在下载：%s</string>
    <string name="you_have_news_messages">你有%s条最新消息</string>
    <string name="copy_success">复制成功</string>
    <string name="tip_save_image_suc">图片已保存(手机相册-> fire_img -> %s)</string>
    <string name="equipment_name">设备名称</string>
    <string name="equipment_name_text">消火栓</string>
    <string name="equipment_location">设备位置</string>
    <string name="equipment_status">设备状态</string>
    <string name="equipment_location_text">1号楼东侧</string>
    <string name="equipment_is_abnormal">设备是否异常</string>
    <string name="big">>>>>>>>></string>
    <string name="right">正常</string>
    <string name="exception">异常</string>
    <string name="unknow">未知</string>
    <string name="exception_info">请输入备注信息</string>
    <string name="exception_img">请上传周边环境照片</string>
    <string name="exception_info_type_in">请输入异常信息</string>
    <string name="equipment_inspect_sys">产后康复锻炼系统</string>
    <string name="equipment_productor">设备厂商</string>
    <string name="equipment_install_position">安装位置</string>
    <string name="equipment_person_incharge">负责人</string>
    <string name="check_than_submit">检查确认无误后，请提交</string>
    <string name="confirm_submit">确认提交</string>
    <string name="action_blutooth">蓝牙状态</string>
    <string name="scan_record">锻炼记录</string>
    <string name="scan_record_detail">巡检记录详情</string>
    <string name="connect_ble_list">蓝牙列表</string>
    <string name="scan_record_last_time">上次巡检时间</string>
    <string name="scan_record_next_time">下次巡检时间段</string>
    <string name="scan_record_other_info">描述</string>
    <string name="txt_user">个人信息</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update_info">检查更新</string>
    <string name="btn_logout">退出</string>
    <string name="actionbar_title_about_fireiot">关于产后康复锻炼系统</string>
    <string name="about_fireiot">关于系统</string>
    <string name="brief_introduction">产后康复锻炼系统简介</string>
    <string name="user_protocal">用户协议</string>
    <string name="txt_user_name_edit">修改用户名</string>
    <string name="txt_user_password_edit">修改密码</string>
    <string name="txt_user_phone_edit">修改手机号</string>
    <string name="txt_user_qq_edit">修改QQ号</string>
    <string name="txt_user_email_edit">修改邮件号</string>
    <string name="progress_logout">正在注销…</string>
    <string name="tip_logout_success">注销成功</string>
    <string name="logout">注销</string>
    <string name="trade_mode_introduce">训练模式介绍</string>
    <string name="floor_detection">盆底检测</string>
    <string name="floor_detection_fast">快肌检测</string>
    <string name="loading_img">加载图片</string>
    <string name="mes_notice">消息通知</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="update">检查新版本</string>
    <string name="about">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="exit">退出</string>
    <string name="grade">去评分</string>
    <string name="notice_accept">接收新通知</string>
    <string name="notice_voice">声音</string>
    <string name="notice_vibration">震动</string>
    <string name="notice_app_exit">退出后不提醒</string>
    <string name="scan_notice_1">请将手机</string>
    <string name="scan_notice_2">靠近</string>
    <string name="scan_notice_3">电子标签</string>
    <string name="scan_notice_small">点击开始扫描</string>
    <string name="app_name">产后康复机器</string>
    <string name="owner_client">车主端</string>
    <string name="tech_client">技师端</string>
    <string name="garage_client">快修站端</string>
    <string name="str_locate_city">定位城市</string>
    <string name="txt_locating">定位中..</string>
    <string name="txt_locate_failure">未知</string>
    <string name="main_tab_name_news">首页</string>
    <string name="main_tab_name_tweet">需求</string>
    <string name="main_tab_name_order">订单</string>
    <string name="main_tab_name_explore">消息</string>
    <string name="contact_customer_server">联系客服</string>
    <string name="main_tab_name_my">我的</string>
    <string name="main_tab_name_quick">快速</string>
    <string name="main_tab_name_question">问答</string>
    <string name="event_status_end">活动结束</string>
    <string name="event_status_ing">正在报名</string>
    <string name="event_status_sing_up">截止报名</string>
    <string name="event_type_osc">源创会</string>
    <string name="event_type_tec">技术交流</string>
    <string name="event_type_other">其他</string>
    <string name="event_type_outside">站外活动</string>
    <string name="app_error">应用程序错误</string>
    <string name="submit_report">打报告去</string>
    <string name="menu_rss">订阅</string>
    <string name="menu_opensoft">开源软件</string>
    <string name="menu_blog">博客区</string>
    <string name="menu_quests">技术问答</string>
    <string name="menu_setting">设置</string>
    <string name="system_setting">系统设置</string>
    <string name="menu_theme">夜间</string>
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_find">找人</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="goods_search">搜索商品</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="hint_phone">手机号码：</string>
    <string name="hint_register_usrname">用户名</string>
    <string name="hint_psw">密码</string>
    <string name="login_username">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="btn_login">登 录</string>
    <string name="btn_register">注册</string>
    <string name="btn_register_Submit">提交注册</string>
    <string name="login_register_fast">快速注册</string>
    <string name="login_retrieve_password">找回密码</string>
    <string name="login_ret_password">修改密码</string>
    <string name="register_verifyCode">验证码</string>
    <string name="register_getVerifyCode">获取验证码</string>
    <string name="register_getVerifyCode_failure">获取验证码失败</string>
    <string name="register_next">下一步</string>
    <string name="register_verifyCode_send">短信验证码已发送</string>
    <string name="register_verifyCode_send_failure">验证失败</string>
    <string name="register_submit_send_failure">注册失败</string>
    <string name="register_send_wait">重新获取(%1$s)</string>
    <string name="register_tip_username">用户名：</string>
    <string name="register_submit">提    交</string>
    <string name="verify_register">注册</string>
    <string name="verify_reget_psw">找回密码</string>
    <string name="old_password_nonull">旧密码不能为空</string>
    <string name="verify_password_short">密码长度不小于6位</string>
    <string name="verify_password_diff">您两次输入的密码不一致</string>
    <string name="verify_confirm">确    定</string>
    <string name="verify_register_success">注册成功，请登录！</string>
    <string name="old_password">请输入旧密码</string>
    <string name="verify_modify_password">请输入新密码</string>
    <string name="verify_modify_password_confirm">再输入新密码</string>
    <string name="verify_modify_success">修改成功，请用新密码登录！</string>
    <string name="tip_please_input_phone">请输入手机号</string>
    <string name="tip_please_input_verify">请输入手机验证码</string>
    <string name="progress_send">正在发送…</string>
    <string name="tip_illegal_phone">请输入正确的手机号</string>
    <string name="tip_please_input_password">请设置密码</string>
    <string name="tip_please_input_password_comfirm">请确认密码</string>
    <string name="tip_no_user_info">用户信息为空</string>
    <string name="btn_link_to_login">已有账号？请登录</string>
    <string name="welcome">欢迎</string>
    <string name="name">全名</string>
    <string name="car_brand_many">车牌多选</string>
    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">点击头像登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_please_input_userphone">请输入手机号码</string>
    <string name="tip_illegal_email">请输入正确的email地址</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="actionbar_title_news">资讯详情</string>
    <string name="actionbar_title_blog">博客详情</string>
    <string name="actionbar_title_software">软件详情</string>
    <string name="actionbar_title_question">帖子详情</string>
    <string name="actionbar_title_tweet">动弹详情</string>
    <string name="actionbar_title_event_detail">活动详情</string>
    <string name="actionbar_title_event_location">活动地址</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="actionbar_title_active">好友圈</string>
    <string name="actionbar_title_mes">消息中心</string>
    <string name="actionbar_title_message_detail">对话</string>
    <string name="friend_home">查看对方资料</string>
    <string name="share_to">分享到</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_sina">微博</string>
    <string name="platform_weichat">微信</string>
    <string name="platform_weichat_circle">朋友圈</string>
    <string name="share_title">开源中国分享</string>
    <string name="share_title_news">开源中国资讯分享</string>
    <string name="share_title_blog">开源中国博客分享</string>
    <string name="share_title_soft">开源中国软件分享</string>
    <string name="share_title_post">开源中国帖子分享</string>
    <string name="tip_start_share">开始分享…</string>
    <string name="tip_share_done">分享完成</string>
    <string name="detail_menu_unfavorite">取消收藏</string>
    <string name="detail_menu_favorite">收藏</string>
    <string name="detail_menu_for_share">分享</string>
    <string name="detail_menu_for_report">举报</string>
    <string name="add_favorite_success">收藏成功</string>
    <string name="add_favorite_faile">收藏失败</string>
    <string name="del_favorite_success">已取消收藏</string>
    <string name="del_favorite_faile">取消收藏失败</string>
    <string name="actionbar_title_question_tag">%s相关</string>
    <string name="comment_count">评论(%s)</string>
    <string name="actionbar_title_search">搜索蓝牙</string>
    <string name="actionbar_title_city">合肥</string>
    <string name="actionbar_title_models">车型</string>
    <string name="edit">编辑</string>
    <string name="register_tobe_carOwner">车主注册</string>
    <string name="register_tobe_technician">技师注册</string>
    <string name="register_tobe_repairShop">快修站注册</string>
    <string name="reg_areaSelect_text">区域选择：</string>
    <string name="reg_detailAddress_text">详细地址：</string>
    <string name="reg_chooseAddress">点击选择区域</string>
    <string name="reg_detailAddress_input">请填写详细地址</string>
    <string name="reg_password">设置密码：</string>
    <string name="reg_password_confirm">确认密码：</string>
    <string name="reg_user_protocol">注册视为同意《会员注册协议》</string>
    <string name="reg_technician_protocol">注册视为同意《技师入驻协议》</string>
    <string name="requirement_publish">需求发布</string>
    <string name="financial_center_payment_details">收支明细</string>
</resources>