<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_city"
        android:title="@string/actionbar_title_city"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/action_models"
        android:title="@string/actionbar_title_models"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/actionbar_search_icon"
        android:title="@string/actionbar_title_search"
        android:orderInCategory="20"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/action_publish_serviceRequirement"
        android:title="@string/requirement_publish"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/action_financian_center_payment_details"
        android:title="@string/financial_center_payment_details"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/action_edit"
        android:title="@string/edit"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:visible="false"/>

</menu>