<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/layout_item_bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.suncreate.pressuresensor.fragment.LoginRegister.RegisterFragment">

    <!-- 用户名 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register_tip_username"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/reg_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/tip_please_input_username"
            android:inputType="text"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- 电话 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hint_phone"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/act_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/tip_please_input_userphone"
            android:inputType="phone"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- 输入密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/reg_password"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/tip_please_input_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- 确认密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/reg_password_confirm"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/reg_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/tip_please_input_password_comfirm"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/button_common_blue"
        android:layout_marginTop="20dp"
        android:text="@string/register_submit" />

</LinearLayout>
