<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="?attr/layout_item_bg"
    tools:context="com.suncreate.pressuresensor.fragment.LoginRegister.RegisterFragment">

    <!-- 选择注册角色 -->
    <RadioGroup
        android:id="@+id/reg_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical">

        <!-- 车主，选择后需要隐藏部分模块 -->
        <RadioButton
            android:id="@+id/reg_carOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_role_choose_bg"
            android:button="@null"
            android:checked="true"
            android:drawableRight="@drawable/selector_role_choose_radio"
            android:text="@string/register_tobe_carOwner"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/reg_technician"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_role_choose_bg"
            android:button="@null"
            android:drawableRight="@drawable/selector_role_choose_radio"
            android:text="@string/register_tobe_technician"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/reg_repairShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_role_choose_bg"
            android:button="@null"
            android:drawableRight="@drawable/selector_role_choose_radio"
            android:text="@string/register_tobe_repairShop"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    </RadioGroup>

    <!-- 选择地址 -->
    <LinearLayout
        android:id="@+id/reg_addressBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <!-- 选择三级行政区 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reg_areaSelect_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reg_chooseAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:hint="@string/reg_chooseAddress"
                android:paddingLeft="5dp"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- 详细地址 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_10"
                android:text="@string/reg_detailAddress_text"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/reg_detailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:hint="@string/reg_detailAddress_input"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- 会员协议 -->
    <TextView
        android:id="@+id/reg_user_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/reg_user_protocol" />

    <!-- 技师协议 -->
    <TextView
        android:id="@+id/reg_technician_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/reg_technician_protocol" />

    <!-- 下一步 -->
    <Button
        android:id="@+id/btn_register_next"
        style="@style/button_common_blue"
        android:layout_marginTop="20dp"
        android:text="@string/register_next" />

</LinearLayout>
