<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_blutooth"
        android:orderInCategory="100"
        android:title="@string/action_blutooth"
        android:icon="@drawable/blutooth_enable"
        app:showAsAction="always"
        android:visible="true" />
    <item
        android:id="@+id/action_select_ble"
        android:orderInCategory="100"
        android:icon="@drawable/technology_blutooth"
        android:title="@string/connect_ble_list"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_scan_record"
        android:orderInCategory="100"
        android:title="@string/scan_record"
        android:icon="@drawable/record"
        app:showAsAction="always"
        android:visible="true" />
</menu>
