<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windows_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <com.suncreate.fireiot.util.EditTextWithDel
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:digits="0123456789"
            android:gravity="center_vertical"
            android:hint="@string/login_username"
            android:imeOptions="actionNext"
            android:inputType="number" />


        <com.suncreate.fireiot.util.EditTextWithDel
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/login_pwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button_common_blue"
            android:layout_marginTop="20dp"
            android:text="@string/btn_login" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/login_register_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4"
                android:text="@string/login_register_fast"
                android:textColor="@color/main_blue"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/login_retrieve_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="@dimen/space_4"
                android:text="@string/login_retrieve_password"
                android:textColor="@color/main_blue"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>