<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="?attr/layout_item_bg"
            android:orientation="vertical"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <AutoCompleteTextView
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/verify_modify_password"
            android:inputType="textPassword" />

        <AutoCompleteTextView
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/verify_modify_password_confirm"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            style="@style/button_common_blue"
            android:layout_marginTop="20dp"
            android:text="@string/verify_confirm"/>
    </LinearLayout>

</ScrollView>