<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.suncreate.fireiot.ui.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/ll_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_notice_1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_notice_2"
                android:textColor="@color/btn_origin_disable"
                android:textSize="@dimen/text_size_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_notice_3"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_scan_ttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_text_box"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_5"
            android:text="@string/scan_notice_small"
            android:textColor="@color/btn_origin_disable"
            android:textSize="@dimen/text_size_20" />

        <!--<ImageView-->
        <!--android:id="@+id/index_scan_logo"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="150dp"-->
        <!--android:layout_below="@+id/tv_scan_ttext"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="@dimen/space_30"-->
        <!--android:contentDescription="@string/index_scan_logo"-->
        <!--android:src="@drawable/fire_rfid_scan" />-->

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/index_scan_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/tv_scan_ttext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_30"
            android:contentDescription="@string/index_scan_logo"
            android:src="@drawable/fire_rfid_scan" /> <!--scanning_gif_0_2s-->

        <info.hoang8f.widget.FButton
            android:id="@+id/index_scan_start"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/index_scan_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:background="@drawable/fire_button_border"
            android:text="@string/index_scan_start"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            fbutton:buttonColor="@color/index_scan_start_bg"
            fbutton:cornerRadius="20dp"
            fbutton:shadowColor="@color/btn_origin_disable"
            fbutton:shadowEnabled="false"
            fbutton:shadowHeight="3dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
